--- a/src/main/resources/migration/file-migrations-6.properties
+++ b/src/main/resources/migration/file-migrations-6.properties
@@ -2,3 +2,4 @@ data/=debug/legacy/data
 gates/matid/=debug/legacy/gates_matid
 fallback/=debug/legacy/fallback
 config/=debug/legacy/config
+lang/=debug/legacy/lang
